--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@astrojs/vue": "^2.1.0",
+    "@babel/core": "^7.21.0",
     "astro": "^2.1.2",
+    "vite": "^4.1.4",
     "vue": "^3.2.30"
   }
 }
