--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
-    "astro": "^2.1.2"
+    "astro": "^2.1.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21"
   }
 }
