Manifest & Actions Update

--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "aom",
+  "name": "Onemanager-Theme-Charo",
+  "description": "The ArmoLab's Onemanager Theme: Charo. \r\nA Theme for Onemanager, written in Astro.",
+  "author": "kobe-koto",
+  "keywords": [
+    "Astro",
+    "Onemanager",
+    "Theme"
+  ],
+  "homepage": "https://aom.koto.gq/",
+  "url": "https://github.com/ArmoLab/Onemanager-Theme-Charo/issues",
+  "license": "AGPL-3",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build && node ./script/replacer.js",
+    "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "build:deploy": "astro build && node ./script/replacer.js"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
