--- a/.github/workflows/AstroBuild-GithubPages.yml
+++ b/.github/workflows/AstroBuild-GithubPages.yml
@@ -31,18 +31,37 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Setup Node.js 16.0
+    - name: Setup Node.js 18.0
       uses: actions/setup-node@v3
       with:
-        node-version: 16.0
+        node-version: 18.0
+
+    - uses: pnpm/action-setup@v2
+      name: Install pnpm
+      id: pnpm-install
+      with:
+        version: 7
+        run_install: false
+
+    - name: Get pnpm store directory
+      id: pnpm-cache
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
+      with:
+        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
-      run: |
-        npm install
+      run: pnpm install
         
     - name: Build via npm run build
-      run: |
-        npm run build
+      run: pnpm run build:deploy
         
     - name: Setup Pages
       uses: actions/configure-pages@v2
