--- a/.github/workflows/AstroBuild-GithubPages.yml
+++ b/.github/workflows/AstroBuild-GithubPages.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Install dependencies
       run: pnpm install
         
-    - name: Build via npm run build
+    - name: Build via pnpm run build
       run: pnpm run build:deploy
         
     - name: Setup Pages
@@ -69,7 +69,6 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
-        # Upload entire repository
         path: './dist/'
 
     - name: Deploy to GitHub Pages
