--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro build && astro preview",
     "build:deploy": "astro build && node ./script/replacer.js",
     "PlatformSwitch": "node ./script/PlatformSwitcher.js"
   },
