migrating aom.koto.gq to charo.koto.cc

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# idea
-/.idea/shelf/
-/.idea/workspace.xml
-/.idea/httpRequests/
+# ide files
+/.idea/
+/.vscode/
 
 # pnpm moudles
 /node_modules/
