--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,14 @@
     "jsx": "preserve",
     "allowJs": true,
     "sourceMap": false,
-    "baseUrl": "src",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layout/*"],
+      "@icons/*": ["src/components/fa-icons/*"],
+      "@assets/*": ["src/assets/*"]
+    }
   },
   "include": [
     "src",
