--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@vitejs/plugin-legacy": "^4.0.2",
     "astro": "^2.1.2",
+    "astro-icon": "^0.8.1",
     "autoprefixer": "^10.4.14",
+    "heroicons": "^2.0.18",
     "postcss": "^8.4.21",
     "sass": "^1.62.1",
     "vite": "^4.2.1"
