--- a/.github/workflows/AstroBuild-GithubPages.yml
+++ b/.github/workflows/AstroBuild-GithubPages.yml
@@ -31,16 +31,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Setup Node.js 18.0
+    - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18.0
+        node-version: 20.0
 
     - uses: pnpm/action-setup@v2
       name: Install pnpm
       id: pnpm-install
       with:
-        version: 7
+        version: 8
         run_install: false
 
     - name: Get pnpm store directory
