--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "PlatformSwitch": "node ./script/PlatformSwitcher.js"
   },
   "dependencies": {
-    "@vitejs/plugin-legacy": "^4.0.2",
-    "astro": "^2.1.2",
-    "astro-icon": "^0.8.1",
-    "autoprefixer": "^10.4.14",
-    "heroicons": "^2.0.18",
-    "postcss": "^8.4.21",
-    "sass": "^1.62.1",
-    "vite": "^4.2.1"
+    "@iconify-json/heroicons": "^1.1.20",
+    "@iconify-json/iconoir": "^1.1.41",
+    "astro": "^4.4.0",
+    "astro-icon": "^1.1.0",
+    "autoprefixer": "^10.4.17",
+    "heroicons": "^2.1.1",
+    "postcss": "^8.4.35",
+    "sass": "^1.71.0",
+    "vite": "^5.1.3"
   },
   "devDependencies": {
-    "terser": "^5.16.8"
+    "terser": "^5.27.1"
   }
 }
