--- a/package.json
+++ b/package.json
@@ -17,21 +17,12 @@
     "start": "astro dev",
     "build": "astro build && node ./script/replacer.js",
     "preview": "astro build && node ./script/replacer.js && astro preview",
-    "build:deploy": "astro build && node ./script/replacer.js isDeploy=true",
-    "PlatformSwitch": "node ./script/PlatformSwitcher.js"
+    "build:deploy": "astro build && node ./script/replacer.js isDeploy=true"
   },
   "dependencies": {
     "@iconify-json/heroicons": "^1.1.20",
-    "@iconify-json/iconoir": "^1.1.41",
     "astro": "^4.4.0",
     "astro-icon": "^1.1.0",
-    "autoprefixer": "^10.4.17",
-    "heroicons": "^2.1.1",
-    "postcss": "^8.4.35",
-    "sass": "^1.71.0",
-    "vite": "^5.1.3"
-  },
-  "devDependencies": {
-    "terser": "^5.27.1"
+    "sass": "^1.71.0"
   }
 }
